// Copyright (C) 2025 Alex Katlein
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

option go_package = "github.com/vemilyus/borg-collective/credentials/internal/proto";

package proto;

service CredStore {
  rpc GetInfo(Unit) returns (StoreInfo) {}

  rpc UnlockVault(AdminCredentials) returns (Unit) {}
  rpc LockVault(Unit) returns (Unit) {}

  rpc SetRecoveryRecipient(RecoveryRecipient) returns (Unit) {}

  rpc CreateVaultItem(ItemCreation) returns (Item) {}
  rpc ListVaultItems(ItemSearch) returns (stream Item) {}
  rpc DeleteVaultItems(ItemDeletion) returns (stream Item) {}
  rpc ReadVaultItem(ItemRequest) returns (ItemValue) {}

  rpc CreateClientCredentials(ClientCreation) returns (ClientCredentials) {}
}

message Unit {}

message StoreInfo {
  string version = 1;
  bool isVaultLocked = 2;
  bool isProduction = 3;
}

message AdminCredentials {
  string passphrase = 1;
}

message RecoveryRecipient {
  AdminCredentials credentials = 1;
  string recipient = 2;
}

message ItemCreation {
  AdminCredentials credentials = 1;
  string description = 2;
  bytes value = 3;
}

message ItemSearch {
  AdminCredentials credentials = 1;
  string query = 2;
}

message ItemDeletion {
  AdminCredentials credentials = 1;
  repeated string id = 2;
}

message Item {
  string id = 1;
  string description = 2;
  string checksum = 3;
  int64 createdAt = 4;
}

message ItemRequest {
  oneof credentials {
    AdminCredentials admin = 1;
    ClientCredentials client = 2;
  }
  string itemId = 3;
}

message ItemValue {
  bytes value = 1;
}

message ClientCreation {
  AdminCredentials credentials = 1;
  string description = 2;
}

message ClientCredentials {
  string id = 1;
  string secret = 2;
}
